intTests/test_type_errors/err027.saw
//
// Not enough arguments for type constructor: arrays
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : [] = [];


